# nairi

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING-cn.md  CONTRIBUTING.md  LICENSE  README-cn.md  README.md  SECURITY-cn.md  SECURITY.md  pyproject.toml
.github/workflows/: guards.yml
.hermes/plans/: 2026-06-08_185318-project-audit-plan.md
apps/admin/: Dockerfile  index.html  package-lock.json  package.json
apps/public-site/: Dockerfile  next.config.mjs  package-lock.json  package.json
docker/: .env.example  Dockerfile.admin  Dockerfile.api  Dockerfile.public  docker-compose.yml
docs/: admin-guide-cn.md  admin-guide.md  agent-mcp-guide-cn.md  agent-mcp-guide.md  api-auth-cn.md  api-auth.md  deployment-compose-cn.md  deployment-compose.md  docker-compose-plan-cn.md  docker-compose-plan.md  migration-operator-handoff-cn.md  migration-operator-handoff.md
memory-bank/: admin-console.md  agent-mcp-design.md  api-contract.md  architecture.md  content-system.md  contract-index.md  data-model.md  decisions.md  deployment.md  executable-repair-tooling.md  frontend-design.md  guard-ci.md  integration-map.md  product-design.md  progress-log.md  project-audit-2026-06-08.md  project-audit.md  project-review.md  project-state.md  requirements.md  roadmap.md  tech-stack.md
scripts/checks/: executable_repair_tooling_design_check.py  frontend_admin_foundation_check.py  frontend_public_cache_check.py  frontend_public_canonical_check.py  frontend_public_detail_check.py  frontend_public_list_check.py  frontend_public_metadata_check.py  frontend_public_render_check.py  (+7 more)
(+46 files in other folders)
