[project]
name = "nairi"
version = "0.1.0"
description = "API-first, agent-first CMS for publishing project experience."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.scripts]
nairi-post-store-migration-rehearsal = "nairi_api.migration_rehearsal:main"
nairi-post-store-repair-dry-run = "nairi_api.migration_repair_dry_run:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["services/api/src"]
testpaths = ["services/api/tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
